Jersey Maven Range

--- a/wimi-playground-server/wimi-playground-server-se/pom.xml
+++ b/wimi-playground-server/wimi-playground-server-se/pom.xml
@@ -15,7 +15,7 @@
 
 	<properties>
         <mainClass>org.wimi.playground.server.se.PlaygroundServer</mainClass>
-        <jersey.version>2.31</jersey.version>
+        <jersey.version>[2.31, 2.32-A00)</jersey.version>
 	</properties>
 
 	<dependencies>
